<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="Words">
        <item >first</item>
        <item >second</item>
        <item >third</item>
        <item >fourth</item>
        <item >fifth</item>
        <item >sixth</item>
    </string-array>

    <string name="app_name">Hangman</string>
    <string name="action_settings">Settings</string>
    <string name="startButtonText">Start!</string>
    <string name="Instructions">Guess the letters in the word. Eight wrong guesses and you are dead.</string>
    <string name="newWordString">New word</string>
    <string name="addWord">Add Word</string>
    <string name="EditButtonText">Edit words</string>
    <string name="HannuHanhi">hannuhanhi</string>
    <string name="HintString">Hint</string>
    <string name="menu_open">Open</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_delete">Delete</string>
</resources>
