<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/FIELD_INPUT_WORD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/newWordString" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/FIELD_INPUT_HINT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/HintString" />

    <Button
        android:id="@+id/BUTTON_ADD_WORD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:text="@string/addWord" />

    <ListView
        android:id="@+id/LIST_WORDS"
        android:layout_width="match_parent"
        android:layout_height="264dp"
        android:choiceMode="singleChoice"
        tools:listitem="@layout/word_list" >
    </ListView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>