<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".IntroActivity" >

        <Button
            android:id="@+id/BUTTON_START"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/FIELD_INPUT_USER"
            android:layout_alignParentBottom="true"
            android:text="@string/startButtonText" />

        <Button
            android:id="@+id/BUTTON_EDIT_WORDS"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/BUTTON_START"
            android:layout_alignBottom="@+id/BUTTON_START"
            android:layout_alignRight="@+id/FIELD_INPUT_USER"
            android:text="@string/EditButtonText" />

        <EditText
            android:id="@+id/FIELD_INPUT_USER"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/BUTTON_START"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="18dp"
            android:ems="10"
            android:hint="Enter your name" />

        <TextView
            android:id="@+id/Instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/FIELD_INPUT_USER"
            android:layout_marginBottom="58dp"
            android:text="@string/Instructions"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="6pt" />

</RelativeLayout>
